--- a/cl8/templates/_nav_menu.html
+++ b/cl8/templates/_nav_menu.html
@@ -31,7 +31,7 @@
         <div class="justify-self-start justify-align-center">
           <a class="btn btn-ghost normal-case text-xl max-w-xs" href="/">
             {% if request.constellation.logo %}
-              <img src="{{ request.constellation.logo.url }}" style="width:80px !important;" />
+              <img src="{{ request.constellation.logo.url }}" style="width:70px !important;" />
             {% else %}
               <span class="site-name text-white ml-4">{{ request.site.name }}</span>
             {% endif %}
@@ -41,7 +41,7 @@
           <div></div>
           <section>
             <div class="card search-block ">
-              <div class="card-body">
+              <div class="card-body px-0 py-3">
                 <form id="filter-form"
                       method="get"
                       hx-get="/"
@@ -54,7 +54,7 @@
                     </div>
                     {% if profile_filter %}
                     <div class="	">
-                      <button class="btn mt-4 lg:mt-0 rounded-full primary-btn lg:ml-4" type="submit"><img src="{% static 'images/magnifying-glass.png' %}" style="width:20px !important" /></button>
+                      <button class="btn mt-4 lg:mt-0 rounded-full p-2 primary-btn lg:ml-4 w-[3rem] h-[3rem]" type="submit"><img src="{% static 'images/magnifying-glass.png' %}" style="width:20px !important" /></button>
                     </div>
                     {% endif %}
                     <span class="hidden">{% render_field profile_filter.form.tags %}</span>
