--- a/cl8/templates/pages/home.html
+++ b/cl8/templates/pages/home.html
@@ -7,7 +7,7 @@
       <div></div>
       <section>
         <div class="card search-block border-white border rounded-none">
-          <div class="card-body">
+          <div class="card-body p-1 justify-center h-auto px-[5rem]">
             <div class="active-tags">{% include '_active_tags_list.html' %}</div>
             <div class="profile-count">
               {% if active_search %}
