--- a/theme/templates/base.html
+++ b/theme/templates/base.html
@@ -49,11 +49,13 @@
                     <div></div>
                 </section>
             {% endblock content %}
-            <footer class="grid grid-cols-[1fr_minmax(auto,70rem)_1fr] border bg-neutral">
+            <footer class="grid grid-cols-[1fr_minmax(auto,70rem)_1fr] border bg-[#c8d4de]">
                 <div></div>
-                <div class="footer p-10 text-neutral-content">
-                    <a href="https://ib1.org/terms/" class="link link-hover">Terms of use</a>
-                    <a href="https://ib1.org/privacy/"  class="link link-hover">Privacy notice</a>
+                <div class="footer p-3 justify-center text-neutral-content">
+                    <p class="flex justify-center text-[#677e91]">Icebreaker One Limited (an independent non-partisan non-profit) |
+                    <a href="https://ib1.org/terms/" class="link link-hover ">Terms of use</a> |
+                    <a href="https://ib1.org/privacy/"  class="link link-hover ">Privacy notice</a> | This Website is powered by 100% renewable energy
+                    </p>
                 </div>
                 <div></div>
             </footer>
