--- a/cl8/templates/_nav_menu.html
+++ b/cl8/templates/_nav_menu.html
@@ -29,9 +29,9 @@
     <div class="">
       <div class="flex justify-between items-center">
         <div class="justify-self-start justify-align-center">
-          <a class="btn btn-ghost normal-case text-xl max-w-xs" href="/">
+          <a class="btn btn-ghost normal-case text-xl max-w-xs mx-3 lg:mr-3 p-0" href="/">
             {% if request.constellation.logo %}
-              <img src="{{ request.constellation.logo.url }}" style="width:70px !important;" />
+              <img src="{{ request.constellation.logo.url }}" class="w-[255px] lg:w-[65px]"  />
             {% else %}
               <span class="site-name text-white ml-4">{{ request.site.name }}</span>
             {% endif %}
@@ -48,17 +48,19 @@
                       hx-trigger="submit, htmx:confirm from:#id_tags, htmx:confirm from:#id_bio, toggle-tag from:body"
                       hx-target=".sidebar"
                       hx-push-url="true">
-                  <div class="grid grid-cols-1 lg:grid-cols-[1fr_10rem]">
-                    <div>
-                      {% render_field profile_filter.form.bio hx-get="/" hx-trigger="keyup changed delay:0.1s," hx-target=".sidebar" class="text-xl rounded-xl min-w-[100%]" hx-sync="closest form:abort" %}
-                    </div>
-                    {% if profile_filter %}
-                    <div class="	">
-                      <button class="btn mt-4 lg:mt-0 rounded-full p-2 primary-btn lg:ml-4 w-[3rem] h-[3rem]" type="submit"><img src="{% static 'images/magnifying-glass.png' %}" style="width:20px !important" /></button>
-                    </div>
-                    {% endif %}
-                    <span class="hidden">{% render_field profile_filter.form.tags %}</span>
-                  </div>
+                      
+                      <div class="grid grid-cols-1 lg:grid-cols-[1fr_auto] gap-4 items-center lg:gap-4">
+                        <div class="flex items-center w-full">
+                          {% render_field profile_filter.form.bio hx-get="/" hx-trigger="keyup changed delay:0.1s," hx-target=".sidebar" class="text-xl rounded-xl w-full " hx-sync="closest form:abort" %}
+                          {% if profile_filter %}
+                          <button class="btn ml-2 lg:ml-4 rounded-full p-2 primary-btn w-[3rem] h-[3rem]" type="submit">
+                            <img src="{% static 'images/magnifying-glass.png' %}" class="w-5 h-5" />
+                          </button>
+                          {% endif %}
+                        </div>
+                        
+                        <span class="hidden">{% render_field profile_filter.form.tags %}</span>
+                      </div>
                 </form>
               </div>
             </div>
