--- a/cl8/templates/_profile_create.html
+++ b/cl8/templates/_profile_create.html
@@ -21,6 +21,11 @@
     div>input[type='file'] {
         margin-left: 10rem;
     }
+    @media screen and (max-width:768px) {
+        div>input[type='text']{
+            min-width: 100%;
+        }
+    }
 </style>
 <div class="card-body p-0">
     <form enctype="multipart/form-data" method="post">
@@ -30,8 +35,8 @@
             {{ form.non_field_errors }}
         </div>
         {% endif %}
-        <div class="grid lg:grid-cols-3">
-            <div class="sidebar text-center p-3 transition-all border border-white lg:inline  ">
+        <div class="lg:grid lg:grid-cols-3">
+            <div class="w-full lg:w-auto sidebar text-center p-3 transition-all border border-white lg:inline  ">
                 {% if form.instance.photo %}
                 <img id="photoPreview" class="w-48 h-48 m-auto block rounded-full object-cover" src="{{ form.instance.photo.url }}" />
                 {% else %}
@@ -58,7 +63,7 @@
                 <p class="text-sm  px-3 m-auto">When 'visible' is checked, your profile will show up in searches</p>
             </div>
             <div class=" col-span-2  p-4 transition-all border border-white lg:inline">
-                <div class="flex justify-between mb-4">
+                <div class="block lg:flex justify-between mb-4">
                     <button class="mt-3 btn primary-btn rounded-full">Save changes</button>
                     <a class="mt-3 btn bg-[#ff4d11] border-[#ff4d11] hover:bg-[#ff4d11] rounded-full" 
                     href="{% url 'account_reset_password' %}">Email password reset</a>
