--- a/cl8/templates/_profile_edit.html
+++ b/cl8/templates/_profile_edit.html
@@ -1,4 +1,5 @@
 {% load static widget_tweaks %}
+
 <style>
     div>label {
         margin-top: 1rem;
@@ -28,6 +29,7 @@
         }
     }
 </style>
+
 <div class="card-body p-0">
     <form enctype="multipart/form-data" method="post" action="{% url 'profile-edit' profile.short_id %}">
         {% if form.errors %}
@@ -199,5 +201,20 @@
             $("#visibilityStatus").val("false");
         }
     });
+    document.getElementById('id_bio').addEventListener('input', function (event) {
+        const searchQuery = event.target.value;
+        if (searchQuery) {
+          const newUrl = `/?bio=${encodeURIComponent(searchQuery)}`;
+          window.location.href = newUrl;  // Redirects to the new URL with the search query as a parameter
+        }
+      });
+
+      document.getElementById('search-button').addEventListener('click', function () {
+        const searchQuery = document.getElementById('bio-search').value;
+        if (searchQuery) {
+          const newUrl = `/?bio=${encodeURIComponent(searchQuery)}`;
+          window.location.href = newUrl; // Redirect to the URL with the bio search query
+        }
+      });
 </script>
 {{ form.media }}
