--- a/cl8/templates/account/email/password_reset_key_message.html
+++ b/cl8/templates/account/email/password_reset_key_message.html
@@ -2,6 +2,9 @@
 
 <html>
 <body>
+  {% if password_reset_content %}
+        {{ password_reset_content | safe }}
+    {% else %}
   <p>Hello from Constellate!</p>
 
   <p>You're receiving this email because you or someone else has requested a password reset for your user account.</p>
@@ -12,5 +15,7 @@
 
   <p>Thank you for using Constellate!</p>
   <p>constellate.localhost</p>
+  {% endif %}
+
 </body>
 </html>
