--- a/cl8/templates/_nav_menu.html
+++ b/cl8/templates/_nav_menu.html
@@ -53,7 +53,7 @@
                         <div class="flex items-center w-full">
                           {% render_field profile_filter.form.bio hx-get="/" hx-trigger="keyup changed delay:0.1s," hx-target=".sidebar" class="text-xl rounded-xl w-full " hx-sync="closest form:abort" %}
                           {% if profile_filter %}
-                          <button class="btn ml-2 lg:ml-4 rounded-full p-2 primary-btn w-[3rem] h-[3rem]" type="submit">
+                          <button class="btn ml-2 lg:ml-4 rounded-full p-2 primary-btn w-[3rem] h-[3rem]" id="search-button" type="submit">
                             <img src="{% static 'images/magnifying-glass.png' %}" class="w-5 h-5" />
                           </button>
                           {% endif %}
