--- a/cl8/templates/_profile_create.html
+++ b/cl8/templates/_profile_create.html
@@ -65,8 +65,8 @@
             <div class=" col-span-2  p-4 transition-all border border-white lg:inline">
                 <div class="block lg:flex justify-between mb-4">
                     <button class="mt-3 btn primary-btn rounded-full">Save changes</button>
-                    <a class="mt-3 btn bg-[#ff4d11] border-[#ff4d11] hover:bg-[#ff4d11] rounded-full" 
-                    href="{% url 'account_reset_password' %}">Email password reset</a>
+                    {% comment %} <a class="mt-3 btn bg-[#ff4d11] border-[#ff4d11] hover:bg-[#ff4d11] rounded-full" 
+                    href="{% url 'account_reset_password' %}">Email password reset</a> {% endcomment %}
                     <a class="mt-3 btn secondary-btn rounded-full" href="{% url 'home' %}">Cancel</a>
                 </div>
                 <div class="form-control w-full mb-4">
