--- a/cl8/templates/pages/home.html
+++ b/cl8/templates/pages/home.html
@@ -38,8 +38,8 @@
         <div class="sidebar p-3 transition-all border border-white {% if hide_profile_list %}hidden{% endif %} lg:inline"
              style="height: 75vh">{% include "pages/_paginated_profiles.html" %}</div>
         <div id="profile-slot"
-             class="card bg-transparent lg:col-span-2 border border-white	 rounded-none {% if not hide_profile_list %}hidden{% endif %} lg:inline">
-          {% if profile %}
+             class="card bg-transparent lg:col-span-2 border border-white	 rounded-none {% if not hide_profile_list %}{% endif %} lg:inline">
+             {% if profile %}
             {% comment %} show the profile with all the tags, and details {% endcomment %}
             {% include '_profile.html' %}
           {% else %}
