--- a/cl8/templates/_profile_edit.html
+++ b/cl8/templates/_profile_edit.html
@@ -7,9 +7,9 @@
         display: inline-block;
     }
 
-    div>input[type='text'] {
+    /* div>input[type='text'] {
         min-width: 40rem;
-    }
+    } */
 
 
     div>.helptext {
@@ -23,11 +23,11 @@
     div>input[type='file'] {
         margin-left: 10rem;
     }
-    @media screen and (max-width:768px) {
+    /* @media screen and (max-width:768px) {
         div>input[type='text']{
             min-width: 100%;
         }
-    }
+    } */
 </style>
 
 <div class="card-body p-0">
