--- a/cl8/templates/_profile_edit.html
+++ b/cl8/templates/_profile_edit.html
@@ -167,6 +167,7 @@
     </form>
 </div>
 <script type="text/javascript" src="{% static 'admin/js/vendor/jquery/jquery.js' %}"></script>
+{{ form.media }}
 <script>
     // Trigger file selection when "Choose file" button is clicked
     $("#btnImportData").on("click", function () {
