--- a/cl8/templates/_nav_menu.html
+++ b/cl8/templates/_nav_menu.html
@@ -110,9 +110,9 @@
                 </ul>
               </li>
             {% else %}
-              <li>
+              {% comment %} <li>
                 <a>Login</a>
-              </li>
+              </li> {% endcomment %}
             {% endif %}
           </ul>
         </div>
