--- a/cl8/templates/account/logout.html
+++ b/cl8/templates/account/logout.html
@@ -5,7 +5,7 @@
 {% endblock %}
 {% block inner %}
 <div class="mt-4 p-5 flex justify-center items-center">
-  <div class="card  w-[25rem]" style="border: 1px solid gray">
+  <div class="card w-[20rem] md:w-[25rem]" style="border: 1px solid gray">
     <div class="card-body">
       <h1 class="text-xl">{% trans "Sign Out" %}</h1>
       <p>{% trans 'Are you sure you want to sign out?' %}</p>
