--- a/cl8/templates/account/password_reset.html
+++ b/cl8/templates/account/password_reset.html
@@ -3,7 +3,7 @@
 {% load account %} 
 {% block head_title %} {% trans "Password Reset" %} {% endblock %} {% block inner %}
 <div class="mt-4 p-5 flex justify-center items-center">
-  <div class="card  w-[25rem]" style="border: 1px solid gray">
+  <div class="card w-[20rem] md:w-[25rem]" style="border: 1px solid gray">
     <div class="card-body">
       <h1 class="text-lg">{% trans "Password Reset" %}</h1>
       {% if user.is_authenticated %} {% include "account/snippets/already_logged_in.html" %} {% endif %}
