--- a/cl8/templates/account/password_reset_done.html
+++ b/cl8/templates/account/password_reset_done.html
@@ -7,7 +7,7 @@
 {% endblock %}
 {% block inner %}
 <div class="mt-4 p-5 flex justify-center items-center">
-    <div class="card  w-[25rem]" style="border: 1px solid gray">
+    <div class="card w-[20rem] md:w-[25rem]" style="border: 1px solid gray">
         <div class="card-body">
             <h1 class="text-2xl">{% trans "Password Reset" %}</h1>
             {% if user.is_authenticated %}
