--- a/cl8/templates/_nav_menu.html
+++ b/cl8/templates/_nav_menu.html
@@ -19,7 +19,7 @@
   {% endif %}
   
 </style>
-<header class="header-color-override grid grid-cols-[1fr_minmax(auto,70rem)_1fr]">
+<header class="header-color-override md:px-3 grid grid-cols-[1fr_minmax(auto,70rem)_1fr]">
   {% comment %}
   empty div here and at the end gives us our mx-auto style spacing 
   using css grid
