--- a/cl8/templates/pages/home.html
+++ b/cl8/templates/pages/home.html
@@ -35,7 +35,7 @@
           We only want to hide the list of profiles when there is NO filtered search
           and when a user is not selected.
         {% endcomment %}
-        <div class="sidebar order-2 lg:order-1  p-3 transition-all border border-white {% if hide_profile_list %}hidden{% endif %} lg:inline"
+        <div class="sidebar order-2 lg:order-1  p-3 transition-all border border-white {% if hide_profile_list and  active_tags%}hidden{% endif %} lg:inline"
              style="height: 100%">{% include "pages/_paginated_profiles.html" %}</div>
         <div id="profile-slot"
              class="card order-1 lg:order-2 bg-transparent lg:col-span-2 border border-white	 rounded-none {% if not hide_profile_list %}{% endif %} lg:inline">
@@ -112,11 +112,11 @@
         const profileList = htmx.find(".sidebar")
 
         if (evt.detail.hide_profile_list) {
-          profileSlot.classList.remove("hidden")
-          profileList.classList.add("hidden")
+          //profileSlot.classList.remove("hidden")
+          //profileList.classList.add("hidden")
         } else {
-          profileSlot.classList.add("hidden")
-          profileList.classList.remove("hidden")
+         // profileSlot.classList.add("hidden")
+        //  profileList.classList.remove("hidden")
         }
       })
       
