--- a/theme/templates/base.html
+++ b/theme/templates/base.html
@@ -49,7 +49,7 @@
                     <div></div>
                 </section>
             {% endblock content %}
-            <footer class="grid grid-cols-[1fr_minmax(auto,70rem)_1fr] border bg-[#c8d4de]">
+            <footer class="grid z-10 grid-cols-[1fr_minmax(auto,70rem)_1fr] border bg-[#c8d4de]">
                 <div></div>
                 <div class="footer p-3 justify-center text-neutral-content">
                     <p class="flex justify-center text-[#677e91]">Icebreaker One Limited (an independent non-partisan non-profit) |
